@@ -1,4 +1,5 @@
 5.0.0 -> 5.0.1:
+    - jbj: QNX does not have insque/remque.
     - jbj: QNX does not have d_off.
     - jbj: proof-of-concept rpmbuild --lsb implementation.
     - mej: catch EOF returned as RPMRC_NOTFOUND correctly.
